src/objects/Interaction__c.object
<CustomObject>
    <description>Interaction Log and Staging Object</description>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The official plan or program the individual applies for. A lookup to Program with a filter criteria of Record Type = Academic Program.</description>
        <inlineHelpText>The official plan or program the individual applies for.</inlineHelpText>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Academic_Program_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Academic_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the EASY Term Object</description>
        <inlineHelpText>EASY Term Object</inlineHelpText>
        <label>Academic Term</label>
        <referenceTo>Academic_Term__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Campaign_Key__c</fullName>
        <description>Specifies the Additional Campaign that should be connected to the additional Campaign Member created by this Interaction. If available, it uses the Interaction &quot;Campaign Reference ID&quot; field, otherwise it uses the &quot;Campaign Reference ID&quot; from the associated Additional Campaign.</description>
        <formula>IF(ISBLANK(Additional_Campaign_Reference_ID__c),CASESAFEID(Additional_Campaign__r.Campaign_Key__c),Additional_Campaign_Reference_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Campaign Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Campaign_Member_Status__c</fullName>
        <description>The status that should be set on the Campaign Member created for the Additional Campaign. It must match an available status from the Additional Campaign, and it cannot be blank.</description>
        <inlineHelpText>Set the status for the Campaign Member created from the Additional Campaign.</inlineHelpText>
        <label>Additional Campaign Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Campaign_Reference_ID__c</fullName>
        <description>An external ID to match to the Additional Campaign. It must either match an existing campaign&apos;s Campaign Reference ID, or a campaign&apos;s Salesforce ID. If filled out, it populates the Interaction &quot;Additional Campaign Key&quot; formula field.</description>
        <label>Additional Campaign Reference ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The secondary campaign (event, marketing effort, etc.) connected to this Interaction. When the Additional Campaign Member Status field is also set, a Campaign Member will be created for the individual.</description>
        <inlineHelpText>Set the secondary campaign (event, marketing effort, etc.) connected to this Interaction to create another Campaign Member.</inlineHelpText>
        <label>Additional Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Additional_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admit_Type__c</fullName>
        <description>The category the potential applicant falls into for recruitment segmentation (Ex: New student, Transfer student, etc.)</description>
        <inlineHelpText>Select the type of student for recruitment segmentation.</inlineHelpText>
        <label>Admit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Student</fullName>
                </value>
                <value>
                    <fullName>Transfer Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with. This field along with the Affiliation Role, Affiliation Status, and Primary Affiliation fields creates an Affiliation to the Contact. Filtered to exclude the Administrative Account Record Type.</description>
        <inlineHelpText>Select the organizational account (Ex: business, high school, college, etc.) the individual is affiliated with.</inlineHelpText>
        <label>Affiliated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliation_Key__c</fullName>
        <description>If there is an Affiliated Account specified, this formula returns the value: &quot;.Affiliation_Account__r.Id&quot; and the Interaction Processor prepends Contact.Id to match on the Upsert Key field on Affiliation.</description>
        <formula>IF(ISBLANK(Affiliated_Account__c), &quot;&quot;,
&quot;.&quot;+CASESAFEID(Affiliated_Account__r.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliation Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Role__c</fullName>
        <description>The Contact&apos;s position for the Affiliated Account. If this field is left blank, the default Role for the Account Record Type will be used, if one is indicated in HEDA Settings, otherwise the Role will be blank.</description>
        <inlineHelpText>The Contact&apos;s relationship to the Affiliated Account.</inlineHelpText>
        <label>Affiliation Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation_Status__c</fullName>
        <description>The status of the Contact&apos;s affiliation to the Affiliated Account. Defaulted to &quot;Current.&quot;</description>
        <inlineHelpText>The status of the Contact&apos;s affiliation to the Affiliated Account.</inlineHelpText>
        <label>Affiliation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>The external ID used by the application collection tool or database for matching to Applicant Opportunities.</description>
        <inlineHelpText>The external ID used by the application collection tool or database for matching to Applicant Opportunities.</inlineHelpText>
        <label>Application Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Reason__c</fullName>
        <description>Lists the errors returned when the Interaction Processor fails and the Interaction Status is set to Audit Needed.</description>
        <label>Audit Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Key__c</fullName>
        <description>Specifies the Campaign that should be connected to the Campaign Member created by this Interaction. If available, it uses the Interaction &quot;Campaign Reference ID&quot; field, otherwise it uses the &quot;Campaign Reference ID&quot; from the associated Campaign.</description>
        <formula>IF(ISBLANK(Campaign_Reference_ID__c), Campaign__r.Campaign_Key__c, Campaign_Reference_ID__c)</formula>
        <label>Campaign Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <description>The status that should be set on the Campaign Member created for the Campaign. It must match an available status from the Campaign, and it cannot be blank.</description>
        <inlineHelpText>Select the member status that should be set for the Campaign. It must match an available status from the Campaign.</inlineHelpText>
        <label>Campaign Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Reference_ID__c</fullName>
        <description>An external ID to match to the Campaign. It must either match an existing campaign&apos;s Campaign Reference ID, or a campaign&apos;s Salesforce ID. If filled out, it populates the Interaction &quot;Campaign Key&quot; formula field.</description>
        <label>Campaign Reference ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The main campaign (event, marketing effort, etc.) connected to this Interaction. When the Campaign Member Status field is also set, a Campaign Member will be created for the individual.</description>
        <inlineHelpText>The main campaign (event, marketing effort, etc.) connected to this Interaction. When the Campaign Member Status field is also set, a Campaign Member will be created for the individual.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>Returns the Career from the Academic Program if there is one, otherwise it returns the Career from the Recruitment Program if there is one.</description>
        <formula>IF(ISBLANK(TEXT( Academic_Program__r.Career__c )),
IF(ISBLANK(TEXT(Recruitment_Program__r.Career__c)), &quot;&quot;, TEXT(Recruitment_Program__r.Career__c)),  
TEXT(Academic_Program__r.Career__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Career</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Case object</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constituent_ID__c</fullName>
        <description>The individual&apos;s external ID from another database, used to match on Contact in the Lead and Contact Matching Rules.</description>
        <inlineHelpText>The individual&apos;s external ID from another database.</inlineHelpText>
        <label>Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_ID__c</fullName>
        <description>If this Interaction is associated with a Contact, the 18-digit version of that Contact&apos;s Account ID is displayed here. Used by the Interaction Processor.</description>
        <formula>CASESAFEID(Contact__r.AccountId)</formula>
        <inlineHelpText>If this Interaction is associated with a Contact, the 18-digit version of that Contact&apos;s Account ID is displayed here.</inlineHelpText>
        <label>Contact.Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>The individual&apos;s current job title.</description>
        <inlineHelpText>Enter the individual&apos;s current job title.</inlineHelpText>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The contact created or updated by this Interaction, set by the Interaction Processor.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Values are based on the HEDA Ethnicity field, which matches IPEDS standards.</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Interaction_Source__c</fullName>
        <description>The method by which the data is being added as an Interaction. Set to &quot;Manual Entry&quot; for hand entry, otherwise it represents the integration source (Webform, Purchase List, etc.) Also used in the Skip Mapping functionality on Interaction Mappings.</description>
        <label>Interaction Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Entry</fullName>
                    <default>true</default>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Purchase List</fullName>
                </value>
                <value>
                    <fullName>Student Information System</fullName>
                </value>
                <value>
                    <fullName>Webform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Status__c</fullName>
        <description>When set to &quot;New,&quot; the Interaction Processor runs, then updates the Status based on the result to &quot;Imported&quot; or &quot;Audit Needed.&quot;</description>
        <inlineHelpText>Set the Status to &quot;New&quot; and save to kick off the Interaction process.</inlineHelpText>
        <label>Interaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Audit Required</fullName>
                </value>
                <value>
                    <fullName>Imported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Upsert_Key__c</fullName>
        <description>An external ID for upserting Interactions</description>
        <externalId>true</externalId>
        <label>Interaction Upsert Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this record should only result in a Lead. If checked, the process will not attempt to match on Contact.</description>
        <inlineHelpText>Indicates this record should only result in a Lead.</inlineHelpText>
        <label>Lead Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>The way in which the Lead or Contact&apos;s information was first received.</description>
        <inlineHelpText>Indicate the initial source of this data.</inlineHelpText>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase List</fullName>
                </value>
                <value>
                    <fullName>College Fair</fullName>
                </value>
                <value>
                    <fullName>Office Visit</fullName>
                </value>
                <value>
                    <fullName>Webform</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lead created or updated by this Interaction, set by the Interaction Processor.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <label>Mailing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mailing_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Agrigento</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Alessandria</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>Ancona</fullName>
                </value>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Aosta</fullName>
                </value>
                <value>
                    <fullName>Arezzo</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Ascoli Piceno</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Asti</fullName>
                </value>
                <value>
                    <fullName>Australian Capital Territory</fullName>
                </value>
                <value>
                    <fullName>Avellino</fullName>
                </value>
                <value>
                    <fullName>Bahia</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California Sur</fullName>
                </value>
                <value>
                    <fullName>Bari</fullName>
                </value>
                <value>
                    <fullName>Barletta-Andria-Trani</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>Set to the Start Date of the Term. If Term Start Date is blank, set to today&apos;s date.</description>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Key__c</fullName>
        <description>The Interaction Processor adds the Contact ID to the beginning of this key to match on Opportunities. If this field is blank, no Opportunity will be created. Contact ID + this key should equal the Opportunity Key also updated through workflow.</description>
        <formula>/*The below formula allows for a centralized and decentralized recruitment model.*/

/*If the Academic Program Career = Undergraduate, or Academic Program is blank and the Recruitment Program Career = Undergraduate, this formula uses the centralized model (one Opportunity per Term)*/

IF(OR(ISPICKVAL(Academic_Program__r.Career__c, &quot;Undergraduate&quot;), AND(ISBLANK(Academic_Program__c), ISPICKVAL(Recruitment_Program__r.Career__c, &quot;Undergraduate&quot;))), &quot;.Undergraduate&quot;,

/*If the Academic Program Career = Graduate, or Academic Program is blank and the Recruitment Program Career = Graduate, this formula uses the decentralized model (one Opportunity per Academic Program or Recruitment Program and Term)*/

IF(OR(ISPICKVAL(Academic_Program__r.Career__c, &quot;Graduate&quot;), AND(ISBLANK(Academic_Program__c), ISPICKVAL(Recruitment_Program__r.Career__c, &quot;Graduate&quot;))), &quot;.Graduate.&quot;+IF(ISBLANK(Academic_Program__r.Id), Recruitment_Program__r.Id,Academic_Program__r.Id), 

/*Otherwise, this formula is blank and no Opportunity will be created or updated.*/

&quot;&quot;))</formula>
        <label>Opportunity Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Last Name - Term Name, used to set the Name of the Opportunity that will be created or updated.</description>
        <formula>Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_ID__c</fullName>
        <formula>If (Application__c != null, &quot;0121F0000005NdxQAE&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <inlineHelpText>Required to create or update an Opportunity.</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inquired</fullName>
                    <default>true</default>
                    <label>Inquired</label>
                </value>
                <value>
                    <fullName>Confirmed Interest</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Evaluated</fullName>
                </value>
                <value>
                    <fullName>Admitted</fullName>
                </value>
                <value>
                    <fullName>Deposit Received</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity created or updated by this Interaction, set by the Interaction Processor.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Discount__c</fullName>
        <description>Discount received because of Contact&apos;s affiliation with partner Account</description>
        <label>Partner Discount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pi_TaP__c</fullName>
        <description>For use with Pi-TaP</description>
        <label>Pi-TaP</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Donate</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Credential</fullName>
                </value>
                <value>
                    <fullName>ElevateActual</fullName>
                </value>
                <value>
                    <fullName>MogliSMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Surname__c</fullName>
        <description>Can be used with matching rules</description>
        <label>Previous Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Affiliation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Affiliation created from Affiliated Account should be set to Primary.</description>
        <inlineHelpText>Check this box to indicate the Affiliated Account is the Contact&apos;s main affiliation for that Account type.</inlineHelpText>
        <label>Primary Affiliation</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>